--- a/package.json
+++ b/package.json
@@ -23,10 +23,19 @@
     "type": "git",
     "url": "https://github.com/blackflux/lambda-monitor-logger.git"
   },
-  "keywords": ["logging", "log", "aws", "lambda", "monitor", "debug"],
+  "keywords": [
+    "logging",
+    "log",
+    "aws",
+    "lambda",
+    "monitor",
+    "debug"
+  ],
   "author": "Lukas Siemon",
   "license": "MIT",
-  "bugs": {"url": "https://github.com/blackflux/lambda-monitor-logger/issues"},
+  "bugs": {
+    "url": "https://github.com/blackflux/lambda-monitor-logger/issues"
+  },
   "homepage": "https://github.com/blackflux/lambda-monitor-logger#readme",
   "dependencies": {},
   "licenses": [
@@ -41,7 +50,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.5.5",
     "@babel/register": "7.5.5",
     "@blackflux/eslint-plugin-rules": "1.1.0",
-    "@blackflux/robo-config-plugin": "2.2.3",
+    "@blackflux/robo-config-plugin": "2.3.0",
     "babel-eslint": "10.0.2",
     "chai": "4.2.0",
     "coveralls": "3.0.5",
@@ -50,10 +59,19 @@
     "nyc": "14.1.1",
     "semantic-release": "15.13.19"
   },
-  "engines": {"node": ">= 8.10"},
-  "files": ["lib"],
+  "engines": {
+    "node": ">= 8.10"
+  },
+  "files": [
+    "lib"
+  ],
   "nyc": {
-    "exclude": ["gardener.js", "node_modules/*", "coverage/*", "lib/*"],
+    "exclude": [
+      "gardener.js",
+      "node_modules/*",
+      "coverage/*",
+      "lib/*"
+    ],
     "all": true,
     "babel": true,
     "branches": 100,
@@ -61,12 +79,19 @@
     "check-coverage": true,
     "extension": [],
     "functions": 100,
-    "include": ["**/*.js"],
+    "include": [
+      "**/*.js"
+    ],
     "lines": 100,
     "per-file": false,
     "report-dir": "./coverage",
-    "reporter": ["lcov", "text-summary"],
-    "require": ["@babel/register"],
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ],
+    "require": [
+      "@babel/register"
+    ],
     "statements": 100,
     "tempDir": "./coverage/.nyc_output"
   }
