--- a/package.json
+++ b/package.json
@@ -23,19 +23,10 @@
     "type": "git",
     "url": "https://github.com/blackflux/lambda-monitor-logger.git"
   },
-  "keywords": [
-    "logging",
-    "log",
-    "aws",
-    "lambda",
-    "monitor",
-    "debug"
-  ],
+  "keywords": ["logging", "log", "aws", "lambda", "monitor", "debug"],
   "author": "Lukas Siemon",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/blackflux/lambda-monitor-logger/issues"
-  },
+  "bugs": {"url": "https://github.com/blackflux/lambda-monitor-logger/issues"},
   "homepage": "https://github.com/blackflux/lambda-monitor-logger#readme",
   "dependencies": {},
   "licenses": [
@@ -49,8 +40,8 @@
     "@babel/core": "7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "7.5.5",
     "@babel/register": "7.5.5",
-    "@blackflux/eslint-plugin-rules": "1.2.0",
-    "@blackflux/robo-config-plugin": "2.5.2",
+    "@blackflux/eslint-plugin-rules": "1.3.0",
+    "@blackflux/robo-config-plugin": "2.5.3",
     "babel-eslint": "10.0.2",
     "chai": "4.2.0",
     "coveralls": "3.0.6",
@@ -58,23 +49,17 @@
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-mocha": "6.0.0",
-    "js-gardener": "^2.0.66",
+    "js-gardener": "^2.0.67",
     "nyc": "14.1.1",
-    "semantic-release": "15.13.21"
+    "semantic-release": "15.13.21",
+    "eslint-plugin-jasmine": "2.10.1",
+    "eslint-plugin-json": "1.4.0",
+    "eslint-plugin-markdown": "1.0.0"
   },
-  "engines": {
-    "node": ">= 8.10"
-  },
-  "files": [
-    "lib"
-  ],
+  "engines": {"node": ">= 8.10"},
+  "files": ["lib"],
   "nyc": {
-    "exclude": [
-      "gardener.js",
-      "node_modules/*",
-      "coverage/*",
-      "lib/*"
-    ],
+    "exclude": ["gardener.js", "node_modules/*", "coverage/*", "lib/*"],
     "all": true,
     "babel": true,
     "branches": 100,
@@ -82,19 +67,12 @@
     "check-coverage": true,
     "extension": [],
     "functions": 100,
-    "include": [
-      "**/*.js"
-    ],
+    "include": ["**/*.js"],
     "lines": 100,
     "per-file": false,
     "report-dir": "./coverage",
-    "reporter": [
-      "lcov",
-      "text-summary"
-    ],
-    "require": [
-      "@babel/register"
-    ],
+    "reporter": ["lcov", "text-summary"],
+    "require": ["@babel/register"],
     "statements": 100,
     "tempDir": "./coverage/.nyc_output"
   }
