--- a/.roboconfig.json
+++ b/.roboconfig.json
@@ -8,6 +8,7 @@
       "packageName": "lambda-monitor-logger",
       "projectName": "lambda-monitor-logger",
       "owner": "simlu",
+      "nodeVersion": "10",
       "ownerName": "Lukas Siemon",
       "mergeBot": "MrsFlux"
     }
